# lab9PMVS

./: .gitignore
.github/workflows/: task1.yml  task2.yml  task3.yml  task4.yml
Task1-WeatherApplication/: settings.gradle.kts
Task1-WeatherApplication/.github/workflows/: task1.yml
Task1-WeatherApplication/app/: build.gradle.kts
Task1-WeatherApplication/app/src/androidInstrumentedTest/kotlin/com/example/weatherapplication/: WeatherScreenTest.kt
Task1-WeatherApplication/app/src/androidMain/kotlin/com/example/weatherapplication/: MainActivity.kt
Task1-WeatherApplication/app/src/androidTest/java/com/example/weatherapplication/: ExampleInstrumentedTest.kt
Task1-WeatherApplication/app/src/commonMain/kotlin/com/example/weatherapplication/: App.kt  Platform.kt  WeatherStateHolder.kt
Task1-WeatherApplication/app/src/commonTest/kotlin/com/example/weatherapplication/: ConditionMappingTest.kt  WeatherRepositoryIntegrationTest.kt  WeatherStateHolderTest.kt
Task1-WeatherApplication/app/src/desktopMain/kotlin/com/example/weatherapplication/: DesktopMain.kt
Task1-WeatherApplication/app/src/iosMain/kotlin/com/example/weatherapplication/: MainViewController.kt  Platform.ios.kt  Time.ios.kt
Task1-WeatherApplication/app/src/jsMain/kotlin/com/example/weatherapplication/: main.kt
Task1-WeatherApplication/app/src/jsMain/resources/: index.html
Task1-WeatherApplication/app/src/main/res/layout/: activity_main.xml  activity_weather_details.xml
Task1-WeatherApplication/gradle/: libs.versions.toml
Task1-WeatherApplication/gradle/wrapper/: gradle-wrapper.properties
Task2-Calc/: build.gradle.kts  gradle.properties  settings.gradle.kts
Task2-Calc/app/: build.gradle.kts
Task2-Calc/app/src/commonMain/kotlin/com/example/calculator/: App.kt  (+3 more)
Task2-Calc/app/src/main/: AndroidManifest.xml
Task2-Calc/app/src/main/res/values/: strings.xml
Task3QT/: CMakeLists.txt  Main.qml  main.cpp  playlistmodel.cpp  playlistmodel.h
Task3QT/android/: AndroidManifest.xml
Task3QT/tests/: test_playlistmodel.cpp  test_ui.qml
minsk_transport/: README.md  pubspec.yaml
minsk_transport/android/app/: build.gradle.kts
minsk_transport/android/app/src/main/: AndroidManifest.xml
minsk_transport/integration_test/: app_test.dart
minsk_transport/lib/: main.dart
minsk_transport/lib/data/: mock_transport_data.dart  transport_repository.dart
minsk_transport/lib/db/: app_database.dart
minsk_transport/lib/l10n/: app_be.arb  app_en.arb  app_localizations.dart  app_localizations_be.dart  app_localizations_en.dart  app_localizations_ru.dart  app_ru.arb
minsk_transport/lib/models/: live_vehicle.dart  route_stop.dart  transport_route.dart  transport_type.dart
minsk_transport/lib/providers/: auth_provider.dart  theme_provider.dart  transport_provider.dart
minsk_transport/lib/routes/: app_router.dart
minsk_transport/lib/screens/: home_screen.dart  login_screen.dart  route_details_screen.dart
minsk_transport/lib/widgets/: route_card.dart
minsk_transport/linux/: CMakeLists.txt
minsk_transport/linux/runner/: my_application.cc
minsk_transport/test/: widget_test.dart
minsk_transport/test/providers/: auth_provider_test.dart  theme_provider_test.dart  transport_provider_test.dart
minsk_transport/test/widgets/: login_screen_test.dart
minsk_transport/web/: index.html  manifest.json
(+26 files in other folders)
